--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -147,7 +147,7 @@
 </section>
 <section>
   <h2>Who does this policy apply to?</h2>
-  <p>This policy applies to anyone and everyone who interacts with [COMPANY_NAME]’s information systems, including NMC systems. For example, this policy applies to [COMPANY_NAME] and NMC:</p>
+  <p>This policy applies to anyone and everyone who interacts with [COMPANY_NAME]’s information systems, including [DIVISION_NAME] systems. For example, this policy applies to [COMPANY_NAME] and [DIVISION_NAME]:</p>
   <ul>
     <li>Employees</li>
     <li>Contractors</li>
@@ -160,7 +160,7 @@
 </section>
 <section>
   <h2>Which systems does this policy apply to?</h2>
-  <p>This policy applies to all types of information systems and communications owned or operated by [COMPANY_NAME], Inc., NMC, and any other [COMPANY_NAME] subsidiaries. For example, this policy applies to [COMPANY_NAME] and NMC:</p>
+  <p>This policy applies to all types of information systems and communications owned or operated by [COMPANY_NAME], Inc., [DIVISION_NAME], and any other [COMPANY_NAME] subsidiaries. For example, this policy applies to [COMPANY_NAME] and [DIVISION_NAME]:</p>
   <ul>
     <li>Computers</li>
     <li>Phones</li>
@@ -202,7 +202,7 @@
 </section>
 <section>
   <h3>Sensitive Information</h3>
-  <p><strong>NMC Mexico:</strong> NMC employs individuals who may not be US persons. Transfer or sharing of technical or financial data with any individual or entity who may not be a “US person” requires training to ensure no regulations or laws will be violated. Contact the Export Control department before transferring information which may relate to any government application. Employees must exercise caution when using email or Teams, or when collaborating with NMC counterparts, to ensure government technical or financial information is not shared accidentally.</p>
+  <p><strong>[DIVISION_NAME] Mexico:</strong> [DIVISION_NAME] employs individuals who may not be US persons. Transfer or sharing of technical or financial data with any individual or entity who may not be a “US person” requires training to ensure no regulations or laws will be violated. Contact the Export Control department before transferring information which may relate to any government application. Employees must exercise caution when using email or Teams, or when collaborating with [DIVISION_NAME] counterparts, to ensure government technical or financial information is not shared accidentally.</p>
   <p><strong>Legal and regulatory frameworks:</strong> Violations of the rights of any person or company protected by copyright, trade secret, patent or other intellectual property is prohibited. Unauthorized copying of copyrighted material including, but not limited to, digitization and distribution of photographs from magazines, books or other copyrighted sources, copyrighted music, and the installation of any copyrighted software for which [COMPANY_NAME] or the end user does not have an active license is strictly prohibited.</p>
   <p><strong>Export Control:</strong> Exporting software, technical information, encryption software or technology, in violation of international or regional export control laws is prohibited.</p>
   <p><strong>Information types:</strong> [COMPANY_NAME] identifies and controls sensitive information in accordance with all applicable laws and regulations. All sensitive information must be handled, marked, and protected in accordance with [COMPANY_NAME]’s Information Control Plan. Employees may access, use, transfer, or share sensitive information only to the extent it is authorized, approved, and necessary to fulfill their assigned job duties. All types of sensitive information are limited in who may access or receive it, and employees must refer to management or the IT department for appropriate authorization. Sensitive information includes but is not limited to:
@@ -229,9 +229,9 @@
   <h3>ChatGPT and other public AI services:</h3>
   <p>Publicly accessible AI services offer significant productivity and automation benefits. They also pose very real and unique risks to the organization. It is prohibited to enter any text, prompts, questions, documents, sheets, images, or information of any kind which is not intended for release to the general public. All information entered into these applications is equivalent to releasing the information to the public, and is subject to all regulatory and legal restrictions, as well as company policies regarding sensitive data.</p>
   <h3>Microsoft Office, Email, Teams:</h3>
-  <p>Microsoft Office 365 provides [COMPANY_NAME] employees with Office applications, email, Teams collaboration, and an expansive list of other applications. The Microsoft cloud platform is authorized to handle all forms of [COMPANY_NAME] sensitive information providing that users exercise caution to ensure that the information is only accessible by authorized personnel. Never share technical or financial information related to any defense customer or contract in any email, Teams chat or group which is accessible by NMC employees who are non-US citizens. Always be aware if camera or microphone are on. Be aware of risk of screen sharing and do not accidentally expose sensitive data. Never accept chat messages from non-[COMPANY_NAME] employees or unidentified persons.</p>
+  <p>Microsoft Office 365 provides [COMPANY_NAME] employees with Office applications, email, Teams collaboration, and an expansive list of other applications. The Microsoft cloud platform is authorized to handle all forms of [COMPANY_NAME] sensitive information providing that users exercise caution to ensure that the information is only accessible by authorized personnel. Never share technical or financial information related to any defense customer or contract in any email, Teams chat or group which is accessible by [DIVISION_NAME] employees who are non-US citizens. Always be aware if camera or microphone are on. Be aware of risk of screen sharing and do not accidentally expose sensitive data. Never accept chat messages from non-[COMPANY_NAME] employees or unidentified persons.</p>
   <h3>Infor CloudSuite Industrial (ERP):</h3>
-  <p>[Infor CSI is authorized to handle all forms of [COMPANY_NAME] sensitive information]. The application is configured to prevent any unauthorized transfer of information between [COMPANY_NAME] and NMC databases.</p>
+  <p>[Infor CSI is authorized to handle all forms of [COMPANY_NAME] sensitive information]. The application is configured to prevent any unauthorized transfer of information between [COMPANY_NAME] and [DIVISION_NAME] databases.</p>
   <h3>Customer Portals/Exostar:</h3>
   <p>Each customer collaboration portal such as Exostar is governed by its own use policy, terms, and conditions. All users must be approved for access and must understand and comply with the terms and conditions of the portals they use.</p>
   <h3>GovFTP/ShareTru:</h3>
