--- a/cyber.html
+++ b/cyber.html
@@ -169,7 +169,17 @@
       📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
       🌐 <a href="https://www.linkedin.com/in/adan-lopez-76947911/">LinkedIn</a><br>
       📄 <a href="cyber.html">Back to Portfolio</a>
-    </p>
+ </section>
+       <section>
+        <h1>Experience</h1>
+       </p>
+         <h2>Cyber Risk Management</h2>
+         <p>
+           Achieved measurable risk reductions every year with minimal investment or head count. Quantified the event likelihood (ARO) from sources like industry breach reports, FEMA/USGS National Risk Index, penetration test findings, and recent vulnerability scans. Modeled threats and mapped to assets and business dependencies, then quantified the potential impacts by translating to key profit drivers. Identified practical mitigations using existing tools or practices, to maximize ROI and accelerate risk resolution. Extracted impact calculations (SLE) from sources such as GDPR administrative fines, cyber insurance contracts, penalties from False Claims Act (FCA) violations, ISACA guidance, Verizon DBIR reports, lost defense contracts, and loss of EBITDA from business interruption. Allied with business managers to ensure my calculations (SLE) were based on the real-world and supported by data. Produced scope-limited assessments at the facility, system, and asset level, for rolling up to DoD risk reports. Streamlined risk registers, impact scoring matrices, RTO/RPO metrics, and qualitative risk heat maps to suit the culture and sophistication level of the specific organization.
+         </p>
+         
+    </P>
+   
   </section>
 </main>
 <footer>
