--- a/cyber.html
+++ b/cyber.html
@@ -177,11 +177,40 @@
          </p>
            Achieved measurable risk reductions every year with minimal investment or head count. Quantified the event likelihood (ARO) from sources like industry breach reports, FEMA/USGS National Risk Index, penetration test findings, and recent vulnerability scans. Modeled threats and mapped to assets and business dependencies, then quantified the potential impacts by translating to key profit drivers. Identified practical mitigations using existing tools or practices, to maximize ROI and accelerate risk resolution. Extracted impact calculations (SLE) from sources such as GDPR administrative fines, cyber insurance contracts, penalties from False Claims Act (FCA) violations, ISACA guidance, Verizon DBIR reports, lost defense contracts, and loss of EBITDA from business interruption. Allied with business managers to ensure my calculations (SLE) were based on the real-world and supported by data. Produced scope-limited assessments at the facility, system, and asset level, for rolling up to DoD risk reports. Streamlined risk registers, impact scoring matrices, RTO/RPO metrics, and qualitative risk heat maps to suit the culture and sophistication level of the specific organization.
          </p>
-         <h2>HEADER</h2>
+         <h2>Security Operations (SOC) Management</h2>
+         <p>
+           Implemented and managed internal SOC/SOAR operations utilizing cost effective solutions like AlienVault, SolarWinds LEM, Lepide, Netwrix, ExtraHop NDR, Qualys, Crowdstrike Falcon, Crowdstrike IDP, SentinelOne, Sumologic SIEM, MS Ops Mgr (MOM). Selected by corporate to join a committee evaluating SOC providers for 57 Transdigm aerospace/defense companies. I evaluated shared responsibilities, SLAs and deliverables, across EDR, Patch Management (PM), Vulnerability Management (VM), and SIEM. I assessed performance of 3rd party SOC operations and metrics, such as signal coverage, threat analysis, incident mishandling, threat intelligence feeds, and detection rule effectiveness. I improved SOC metrics by using risk assessment, threat modeling, data inventory and classification, and business impact assessments (BIA), to identify gaps in SOC operations and ensure alignment to real-world business risks. Conducted penetration testing of ADCS and Active Directory that uncovered critical blind spots in SOC monitoring where attacks had gone undetected.
+         </p>
+
+          <h2>HEADER</h2>
          <p>
            TEXT_HERE
          </p>
-   
+
+          <h2>HEADER</h2>
+         <p>
+           TEXT_HERE
+         </p>
+
+          <h2>HEADER</h2>
+         <p>
+           TEXT_HERE
+         </p>
+
+          <h2>HEADER</h2>
+         <p>
+           TEXT_HERE
+         </p>
+
+          <h2>HEADER</h2>
+         <p>
+           TEXT_HERE
+         </p>
+
+          <h2>HEADER</h2>
+         <p>
+           TEXT_HERE
+         </p>
   </section>
 </main>
 <footer>
