--- a/cyber.html
+++ b/cyber.html
@@ -182,9 +182,9 @@
            Implemented and managed internal SOC/SOAR operations utilizing cost effective solutions like AlienVault, SolarWinds LEM, Lepide, Netwrix, ExtraHop NDR, Qualys, Crowdstrike Falcon, Crowdstrike IDP, SentinelOne, Sumologic SIEM, MS Ops Mgr (MOM). Selected by corporate to join a committee evaluating SOC providers for 57 Transdigm aerospace/defense companies. I evaluated shared responsibilities, SLAs and deliverables, across EDR, Patch Management (PM), Vulnerability Management (VM), and SIEM. I assessed performance of 3rd party SOC operations and metrics, such as signal coverage, threat analysis, incident mishandling, threat intelligence feeds, and detection rule effectiveness. I improved SOC metrics by using risk assessment, threat modeling, data inventory and classification, and business impact assessments (BIA), to identify gaps in SOC operations and ensure alignment to real-world business risks. Conducted penetration testing of ADCS and Active Directory that uncovered critical blind spots in SOC monitoring where attacks had gone undetected.
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Securing the Supply Chain</h2>
          <p>
-           TEXT_HERE
+           Responsible for shared responsibility and risk assessment of third-party SOC providers, Microsoft/AWS cloud threats, cloud RMM and endpoint management, XML-integrated inventory management, API-integrated patch management, and many others. Partnered with Purchasing to implement a risk-based vendor onboarding process, vendor scorecards, and approved suppliers list. Performed NIST 800-171 assessments of suppliers. Identified and negotiated gaps in MSP service contracts to ensure security objectives and regulatory requirements are met. Performed supply chain threat modeling and risk mitigation measures to reduce potential blast radius of a supply chain breach. Leveraged SOC 2 Type 2 reports, ISO 27001, BitSight EASM, supplier interviews, supplier policies and procedures, and shared responsibility matrices to evaluate vendor security posture. Leveraged my experience with major supply chain incidents like SolarWinds, CrowdStrike, and Log4j.
          </p>
 
           <h2>HEADER</h2>
