--- a/cyber.html
+++ b/cyber.html
@@ -187,9 +187,9 @@
            Responsible for shared responsibility and risk assessment of third-party SOC providers, Microsoft/AWS cloud threats, cloud RMM and endpoint management, XML-integrated inventory management, API-integrated patch management, and many others. Partnered with Purchasing to implement a risk-based vendor onboarding process, vendor scorecards, and approved suppliers list. Performed NIST 800-171 assessments of suppliers. Identified and negotiated gaps in MSP service contracts to ensure security objectives and regulatory requirements are met. Performed supply chain threat modeling and risk mitigation measures to reduce potential blast radius of a supply chain breach. Leveraged SOC 2 Type 2 reports, ISO 27001, BitSight EASM, supplier interviews, supplier policies and procedures, and shared responsibility matrices to evaluate vendor security posture. Leveraged my experience with major supply chain incidents like SolarWinds, CrowdStrike, and Log4j.
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Securing the Cloud</h2>
          <p>
-           TEXT_HERE
+           Managed hybrid cloud security and reduced cloud risk by 20% by improving cloud posture (CSPM) with external pen testing, BitSight EASM, Maester, Prowler, and Qualys CSPM. Managed data sovereignty compliance with GDPR, ITAR, and CMMC. Developed a shared responsibility matrix for our cloud vendor. Scanned cloud assets like Teams, virtual machines, and Sharepoint against CIS benchmarks. Restricted external data sharing via email and unauthorized clouds with Purview, by combining data classification tags and DLP policies, with Defender for Cloud Apps (CASB) policies. Developed procedures for secure API configuration/access, key management, managed identities, and Azure Storage Accounts. Mitigated misconfiguration risks by implementing change control, change monitoring, and periodic audits. Hands-on experience securing SSO, SAML, OAuth, OIDC, passkeys, Azure RBAC, AWS EC2 web servers, AWS VPC networks, S3 buckets, VPN gateways, elastic IPs, and DNS records. Audited Entra ID Access Packages, External Identities, Enterprise Apps, and external organizations in Azure B2C (CIAM). 
          </p>
 
           <h2>HEADER</h2>
