--- a/cyber.html
+++ b/cyber.html
@@ -131,6 +131,10 @@
 <main>
 
     <section>
+      📄 <a href="Resume-Adan Lopez-GRC.pdf">View Resume</a> | <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
+ </section>
+
+      
       <h2>Common sense and pragmatic approach to cybersecurity..</h2>
       <p>
         20+ years managing cybersecurity and compliance, strategy and execution. 
@@ -138,10 +142,7 @@
         This is where your treasure is buried. Vulnerability can now be measured in a meaningful and actionable way, along with common sense metrics that the 
         the business can understand and measure. This process is the compass that guides everything from disaster recovery, to incident response, to auditing.
       </p>
-    </section>
-
-    <section>
-      <h2>Core Skills</h2>
+       <h3>Core Skills</h3>
       <ul>
         <li>Governance, Risk, and Compliance (CMMC, NIST, GDPR)</li>
          <li>Cybersecurity Management, planning, assessments</li>
@@ -150,8 +151,8 @@
       </ul>
     </section>
 
-<section>
-  <h2>Projects</h2>
+   <section>
+  <h1>Projects</h1>
   <ul>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/riskassess-entra-sso-saml.html">SAML Single Sign-On Risk Assessment for MSP Portal</a></li>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/risk-assessment-ai-internal.html">Risks of Private Generative AI In the Business</a></li>
@@ -162,14 +163,7 @@
   </ul>
 </section>
     
-    <section>
-   <h2>Contact</h2>
-    <p> 
-      📄 <a href="Resume-Adan Lopez-GRC (1).pdf">Resume for Governance Risk & Compliance Management</a>
-      📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
-      🌐 <a href="https://www.linkedin.com/in/adan-lopez-76947911/">LinkedIn</a><br>
-      📄 <a href="cyber.html">Back to Portfolio</a>
- </section>
+
        <section>
         <h1>Experience</h1>
          <p>
@@ -192,19 +186,20 @@
            Managed hybrid cloud security and reduced cloud risk by 20% by improving cloud posture (CSPM) with external pen testing, BitSight EASM, Maester, Prowler, and Qualys CSPM. Managed data sovereignty compliance with GDPR, ITAR, and CMMC. Developed a shared responsibility matrix for our cloud vendor. Scanned cloud assets like Teams, virtual machines, and Sharepoint against CIS benchmarks. Restricted external data sharing via email and unauthorized clouds with Purview, by combining data classification tags and DLP policies, with Defender for Cloud Apps (CASB) policies. Developed procedures for secure API configuration/access, key management, managed identities, and Azure Storage Accounts. Mitigated misconfiguration risks by implementing change control, change monitoring, and periodic audits. Hands-on experience securing SSO, SAML, OAuth, OIDC, passkeys, Azure RBAC, AWS EC2 web servers, AWS VPC networks, S3 buckets, VPN gateways, elastic IPs, and DNS records. Audited Entra ID Access Packages, External Identities, Enterprise Apps, and external organizations in Azure B2C (CIAM). 
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Vulnerability Management Strategy</h2>
          <p>
-           TEXT_HERE
+           My integrated VM strategy received accolades for layering Nessus for endpoints, Bitsight for public-facing attack surfaces, and Secure Score for cloud assets, and blending them into a cohesive strategy of continuous monitoring. Eliminated frequent, unnecessary fire-fighting by targeting/prioritizing vulnerabilities using risk-based metrics which were informed by real business drivers, dependencies, and assets, rather than relying solely on industry metrics like CVSS, KEV, or LEV. Achieved major efficiencies by applying guidelines (CIS Benchmarks, OWASP) to reduce attack surface (least functionality) on core platforms (Azure, Active Directory, VMware), shifting from reactive remediation to strategic/enduring vulnerability reduction.
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Securing the Identity Perimeter</h2>
          <p>
-           TEXT_HERE
+           Modernized and hardened privilege access in MS Entra ID with a tiered administrative model and elimination of standing privileges (JIT via PIM). Implemented a privileged user “scorecard” to identify critical accounts and apply stricter controls, like approval-based escalation, host/IP-bound login, and real-time login alerts. Converted service accounts from password to “managed”, key-based authentication with automated rotation, and reduced access (least privilege), eliminating risks associated with unmanaged service accounts. Automated user access reviews by restructuring group and access roles to align with granular job functions, and changing the naming structure to clarify the access associated with each role, resulting in no-touch access report distribution, and transfer of access review ownership to proper data owners within the organization. Implemented lifecycle management, SSO/SAML, Netwrix PAM, passwordless auth, FIDO2, Windows Hello, passkey, Entra ID conditional access, risk-based adaptive evaluation, ADP HRIS automated provisioning via SCIM, segregation of duties on audit logs, device posture assessment, and API key rotation/vaulting.
+
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Proven Incident Response</h2>
          <p>
-           TEXT_HERE
+           Saved the organization multiple times by responding appropriately and effectively to contain major outbreaks like Hafnium and Log4J before they became a reportable breach. Being grounded in hands-on incident response, my IR strategy prioritizes frequent testing, rapid containment, and out-of-band business continuity of critical business functions. I leverage high quality tabletop exercises as a continuous improvement tool as well as a training tool. Experience standing up minimally-viable IR plans rapidly, to satisfy customer or regulatory requirements for companies who are still early in their journey.
          </p>
 
           <h2>HEADER</h2>
