--- a/cyber.html
+++ b/cyber.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NEW_TITLE_HERE</title>
+  <title>Adan Lopez-Cybersecurity</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
