--- a/cyber.html
+++ b/cyber.html
@@ -134,7 +134,7 @@
       📄 <a href="Resume-Adan Lopez-GRC.pdf">View Resume</a> | <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
  </section>
 
-      
+      <section>
       <h2>Common sense and pragmatic approach to cybersecurity..</h2>
       <p>
         20+ years managing cybersecurity and compliance, strategy and execution. 
