--- a/cyber.html
+++ b/cyber.html
@@ -135,7 +135,7 @@
  </section>
 
       <section>
-      <h2>Common sense and pragmatic approach to cybersecurity..</h2>
+      <h2>Proven Cybersecurity Strategy, Management, and Execution</h2>
       <p>
         20+ years managing cybersecurity and compliance, strategy and execution. 
         True risk management starts with intimate knowledge of business drivers and the workflows that power them, and mapping those dependencies to assets. 
