--- a/cyber.html
+++ b/cyber.html
@@ -138,11 +138,11 @@
       <h2>Proven Cybersecurity Strategy, Management, and Execution</h2>
       <p>
         20+ years managing cybersecurity and compliance, strategy and execution. 
-        True risk management starts with intimate knowledge of business drivers and the workflows that power them, and mapping those dependencies to assets. 
-        This is where your treasure is buried. Vulnerability can now be measured in a meaningful and actionable way, along with common sense metrics that the 
-        the business can understand and measure. This process is the compass that guides everything from disaster recovery, to incident response, to auditing.
+        True risk management starts with critical business drivers and the workflows that power them. 
+        Information can be both a powerful business driver, as well as a crippling business liability.
+        The difference lies in the level of trust a business has in us as defenders. 
       </p>
-       <h3>Core Skills</h3>
+       <h3>Focus</h3>
       <ul>
         <li>Governance, Risk, and Compliance (CMMC, NIST, GDPR)</li>
          <li>Cybersecurity Management, planning, assessments</li>
