--- a/cyber.html
+++ b/cyber.html
@@ -131,7 +131,8 @@
 <main>
 
     <section>
-      <a href="resume_adan lopez_grc.pdf">Download My Resume</a>         |          <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
+      <a href="resume_adan lopez_grc.pdf">Download My Resume</a>
+      <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
  </section>
 
       <section>
