--- a/cyber.html
+++ b/cyber.html
@@ -138,7 +138,7 @@
       <section>
       <h2>Proven Cybersecurity Strategy, Management, and Execution</h2>
       <p>
-        20+ years managing cybersecurity and compliance, strategy and execution. 
+        20+ years of leadership in cybersecurity and compliance in the highly regulated aerospace and defense sector. 
         True risk management starts with critical business drivers and the workflows that power them. 
         Information can be both a powerful business driver, as well as a crippling business liability.
         The difference lies in the level of trust a business has in us as defenders. 
