--- a/cyber.html
+++ b/cyber.html
@@ -131,8 +131,8 @@
 <main>
 
     <section>
-      <a href="resume_adan lopez_grc.pdf">Download My Resume</a>
-      <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
+      <p><a href="resume_adan lopez_grc.pdf">Download My Resume</a></p>
+      <p><a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br></p>
  </section>
 
       <section>
