--- a/cyber.html
+++ b/cyber.html
@@ -132,7 +132,7 @@
 
     <section>
       <p><a href="resume_adan lopez_grc.pdf">Download My Resume</a></p>
-      <p><a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br></p>
+      <p><a href="mailto:heyadanlopez@gmail.com">Ping Me Via SMTP</a><br></p>
  </section>
 
       <section>
