--- a/cyber.html
+++ b/cyber.html
@@ -145,10 +145,10 @@
       </p>
        <h3>Focus</h3>
       <ul>
-        <li>Governance, Risk, and Compliance (CMMC, NIST, GDPR)</li>
-         <li>Cybersecurity Management, planning, assessments</li>
-        <li>Security Operations (SOC, vulnerability management, IR)</li>
-        <li>Privileged Access & Identity Management (Entra ID, AD)</li>
+        <li>Tuning security strategy to critical business drivers, workflows and data assets</li>
+        <li>Embedding compliance seamlessly into existing processes and tools</li>
+        <li>Fostering strong risk management culture through relationship-building</li>
+        <li>Fundamentals, fundamentals, fundamentals</li>
       </ul>
     </section>
 
