--- a/cyber.html
+++ b/cyber.html
@@ -203,9 +203,9 @@
            Saved the organization multiple times by responding appropriately and effectively to contain major outbreaks like Hafnium and Log4J before they became a reportable breach. Being grounded in hands-on incident response, my IR strategy prioritizes frequent testing, rapid containment, and out-of-band business continuity of critical business functions. I leverage high quality tabletop exercises as a continuous improvement tool as well as a training tool. Experience standing up minimally-viable IR plans rapidly, to satisfy customer or regulatory requirements for companies who are still early in their journey.
          </p>
 
-          <h2>HEADER</h2>
+          <h2>Regulatory Frameworks</h2>
          <p>
-           TEXT_HERE
+           Consistently scored in the top 10 out of 57 Transdigm companies during multiple rounds of DFARS, NIST 800-171, CMMC, GDPR, and SOX assessments. Developed simple, no-fuss System Security Plans (SSP) which reduced the burden of compliance and were presented as a model to other business units. Identified gaps in the CMMC assessment practices of our 3rd party consultants, potentially saving the company $65k in failed certification assessments. Significantly reduced the scope of our CMMC assessment by implementing segmentation and strategic asset categorization, saving the company 5 figures in security tooling. Experienced mapping frameworks and merging into a single management tool/program to reduce duplication of work using Excel, Exostar, SAI360, and AuditBoard.
          </p>
   </section>
 </main>
