--- a/cyber.html
+++ b/cyber.html
@@ -131,7 +131,7 @@
 <main>
 
     <section>
-      <p><a href="resume_adan lopez_grc.pdf">Download My Resume</a></p>
+      <p><a href="resume_adan_lopez_grc.pdf">Download My Resume</a></p>
       <p><a href="mailto:heyadanlopez@gmail.com">Ping Me Via SMTP</a><br></p>
  </section>
 
